--- a/app/views/layouts/_flash.html.erb
+++ b/app/views/layouts/_flash.html.erb
@@ -4,7 +4,9 @@
       <% flash.each do |message_type, message| %>
         <div class="alert alert-<%= message_type %>">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <%= message %>
+          <div class="flash-message">
+            <%= message %>
+          </div>
         </div>
       <% end %>
     </div>
