change classes on the record delete button for new styles

--- a/app/views/records/_delete_record_modal.html.erb
+++ b/app/views/records/_delete_record_modal.html.erb
@@ -13,7 +13,7 @@
           
           <%= link_to "YES", record_path(@record), 
               :method => :delete, 
-              :class => "btn btn-primary modal-button gray-button", 
+              :class => "btn modal-button gray-button", 
               :dataDismiss => "modal" %>
 
         </div>
