--- a/app/views/records/_edit_record_form.html.erb
+++ b/app/views/records/_edit_record_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@record, :html => { :multipart => true, "data-ajax" => false }) do |f| %>
+<%= form_for @record, html: { multipart: true } do |f| %>
   <% if @record.errors.any? %>
     <div class="alert alert-danger">
       <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -10,76 +10,154 @@
     </div>
   <% end %>
 
+  <div id="file-upload-container" class="field">
+    <%= f.label :file_upload, "Add Files".html_safe %>
+    <input 
+      multiple
+      type="file"
+      id="custom-file-upload"
+      style="display:none"
+      data-ng-model="form.files"
+      data-on-file-input-change="uploadFiles"
+      novalidate
+    >
+
+    <span class="btn btn-small btn-default btn-inverse" id="file-upload-button" onclick="$(this).parent().find('input[type=file]').click();">Browse</span>
+  </div>
+
+  <!-- Append progress-bars of uploading files -->
+  <div id="progress-bar-table-container" data-ng-if="filesToSend.length > 0" data-ng-cloak>
+    <div class="panel panel-default" id="round-table-edges">
+      <table id="progress-bar-table" class="table table-striped table-bordered">
+        <tbody>
+          <tr data-ng-repeat="f in filesToSend">
+            <td class="file-name-container">
+              <div class="file-name">{{f.name}}</div>
+            </td>
+            <td>
+              <span class="progress" data-ng-if="f.progress >= 0" data-ng-cloak>
+                <div style="width:{{f.progress}}%"></div>
+              </span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+
   <div class="field" id="include-name-container">
     <%= f.label :include_name, "Would you like your name included in the archive?<sup>*</sup>".html_safe, :class => "long-label" %>
-    
-    <div class="boolean-slider-container">
-      <div class="boolean-slider-track">
-        <div class="boolean-slider-knob user-selection-0"></div>
+
+    <div id="switch-container">
+      <div class="onoffswitch">
+        <switch 
+          id="record_include_name" 
+          data-ng-model="form.include_name" 
+          class="blue">
+        </switch>
+        <br>
       </div>
-    </div> 
 
-    <div id="boolean-slider-text">NO</div>
-
-    <!-- include hidden field and submit the value to that hidden field -->
-    <%= f.hidden_field :include_name %>
+      <div id="boolean-slider-text" data-ng-cloak>
+        <div data-ng-if="form.include_name != true && form.include_name != false" style="float:left">NO</div>
+        <div data-ng-if="form.include_name == true" style="float:left">YES</div>
+        <div data-ng-if="form.include_name == false" style="float:left">NO</div>
+      </div>
+    </div>
+  </div>
+    
+  <!-- field for include name -->
+  <div class="hidden">
+    <input 
+      name="record[include_name]"
+      data-ng-value="form.include_name">
   </div>
 
   <div class="field">
     <%= f.label :title, "Title of Material<sup>*</sup>".html_safe %>
-    <%= f.text_field :title %>
-  </div>
-
-  <div id="file-upload-container" class="field">
-    <%= f.label :file_upload, "Replace File".html_safe %>
-    <div id="placeholder-box">File name...</div>
-    <%= f.file_field :file_upload, :id=> "custom-file-upload", style: "display: none;" %>
-    <span class="btn btn-small btn-default btn-inverse" id="file-upload-button" onclick="$(this).parent().find('input[type=file]').click();">Browse</span>
+    <input 
+      type="text" 
+      name="record[title]" 
+      id="record_title"
+      required
+      data-ng-model="form.title">
   </div>
 
   <div class="field">
     <%= f.label :description, "Description<sup>*</sup>".html_safe %>
-    <%= f.text_area(:description, size: '4x5', id: "record-description") %>
+    
+    <textarea 
+      id="record-description" 
+      name="record[description]" 
+      cols="4" 
+      rows="5"
+      placeholder="Add a description of your material (for example, who, what, where and why) to enhance searchability within the archive. Don't forget to credit authors, creators, photographers, etc."
+      required
+      data-ng-model="form.description">
+    </textarea>
   </div>
 
   <div class="field">
     <%= f.label :date, "Date" %>
     <div class="form-group date-container">
       <div class='input-group date' id='datetimepicker1'>
-        <input type='text' class="form-control" id="date-selector-input" />
+        <input 
+          type='text' 
+          class="form-control" 
+          name="record[date]"
+          id="date-selector-input"
+          data-ng-model="form.date">
         <span class="input-group-addon">
           <span class="glyphicon glyphicon-calendar"></span>
         </span>
       </div>
     </div>
-
-    <%= f.hidden_field :date %>
   </div>
 
   <div class="field">
     <%= f.label :location, "Location" %>
-    <%= f.text_field :location %>
+    <input 
+      type="text" 
+      name="record[location]" 
+      id="record_location"
+      data-ng-model="form.location">
   </div>
 
   <div class="field">
     <%= f.label :source_url, "Source URL" %>
-    <%= f.text_field :source_url %>
+    <input 
+      type="text" 
+      name="record[source_url]" 
+      id="record_source_url"
+      data-ng-model="form.source_url">
   </div>
 
   <div class="field">
-    <%= f.label :hashtag, "Hashtag<sup>*</sup>".html_safe %>
-    <%= f.text_field :hashtag %>
-  </div>
-
-  <div class="field">
-    <%= f.label :release_checked, "Terms & Conditions<sup>*</sup>".html_safe %>
-    <%= f.check_box :release_checked, :class => "custom-checkbox" %>
-    <div class="terms-and-conditions">If my contribution is accepted, I agree to donate this material to the Community Voices Archive at Yale University Library for preservation and distribution for research and educational purposes. I understand that I will not receive financial compensation for this material.</div>
+    <%= f.label :hashtag, "Hashtags<sup>*</sup>".html_safe %>
+    <input 
+    type="text" 
+    name="record[hashtag]" 
+    id="record_hashtag"
+    placeholder="Add social media hashtags here, e.g. #WeAreYale"
+    required
+    data-ng-model="form.hashtag">
   </div>
 
   <div class="clear-floats"></div>
 
-  <%= button_tag(type: 'submit', class: "btn btn-primary blue-button submit-button") do %>
-    <i class="icon-ok icon-white"></i> SUBMIT
-  <% end %>
+  <button 
+    name="button" 
+    type="submit" 
+    class="btn btn-primary blue-button save-updates-button"
+    data-ng-disabled="filesToSend.length != filesSent.length">SAVE UPDATES
+  </button>
+
+  <input 
+    class="hidden" 
+    type="checkbox" 
+    value="1" 
+    name="record[release_checked]" 
+    id="record_release_checked"
+    data-ng-model="form.release_checked">
+
 <% end %>
