--- a/app/views/records/_annotate_records.html.erb
+++ b/app/views/records/_annotate_records.html.erb
@@ -1,10 +1,10 @@
-<div class="container" ng-app="GalleryApp" ng-controller="GalleryController">
+<div class="container">
   <div class="padding-sides padding-bottom"> 
     <div class="over-image-row">
       <h3 class="record-title">{{ data.record.title }}</h3>  
       <div class="edit-delete-button-container">
         <div class="btn-group modify-record-button margin-right">
-          <%= link_to "Edit", edit_record_path(@record), 
+          <%= link_to "Save", record_path(@record), 
             :class => "btn btn-primary blue-button", :id => "edit-record-button" %>
         </div>
       </div>
@@ -12,14 +12,15 @@
 
     <div class="masonry-container">
       <div class="masonry">
-        <div ng-repeat="attachment in data.attachments">
+        <div data-ng-repeat="attachment in data.attachments">
           <div class="masonry-item">
-            <img ng-src="{{ attachment.annotation_thumb_url }}"
-                 alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}">
-            <input ng-model="attachment.annotation" 
+            <img data-ng-src="{{ attachment.annotation_thumb_url }}"
+                 alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}"
+                 data-ng-cloak>
+            <input data-ng-model="attachment.annotation" 
                    placeholder="Say something about this file..." 
                    class="attachment-annotation"
-                   ng-change="saveAnnotation(attachment.annotation, attachment.id)"
+                   data-ng-change="saveAnnotation(attachment.annotation, attachment.id)"
                    >
           </div>
         </div>
@@ -27,43 +28,44 @@
     </div>
 
     <!-- Only show pagination controls if num_pages > 1 -->
-    <div ng-show="data.number_of_pages > 1">
+    <div data-ng-if="data.number_of_pages > 1">
       <div class="pagination-controls">
         
         <!-- Previous page link -->
-        <div ng-if="current_page > 0">
-          <a href="" ng-click="previousPage()">
+        <div data-ng-if="currentPage > 0">
+          <a href="" data-ng-click="previousPage()">
             <div class="previous-page">
               &lsaquo;&lsaquo; Previous
             </div>
           </a>
         </div>
         
-        <div ng-if="current_page == 0">
+        <div data-ng-if="currentPage == 0">
           <div class="previous-page"></div>
         </div>
 
         <!-- Next page link -->
-        <div ng-if="current_page + 1 < data.number_of_pages">
-          <a href="" ng-click="nextPage()">
+        <div data-ng-if="currentPage + 1 < data.number_of_pages">
+          <a href="" data-ng-click="nextPage()">
             <div class="next-page">
               Next &rsaquo;&rsaquo;
             </div>
           </a>
         </div>
 
-        <div ng-if="current_page == data.number_of_pages">
+        <div data-ng-if="currentPage == data.number_of_pages">
           <div>class="next-page"></div>
         </div>
 
         <!-- Page toggle circles -->
         <div class="page-toggles">
           <div class="circle-outer-container">
-            <div class="circle-inner-container" ng-repeat="i in pageArray(data.number_of_pages) track by $index">
+            <div class="circle-inner-container" 
+                 data-ng-repeat="i in pageArray(data.number_of_pages) track by $index">
 
-              <a href="" ng-click="fetchAttachments(recordId, $index)">
-                <div ng-if="current_page === $index" class="circle active"></div>
-                <div ng-if="current_page != $index" class="circle"></div>
+              <a href="" data-ng-click="fetchAttachments(recordId, $index)">
+                <div data-ng-if="currentPage === $index" class="circle active"></div>
+                <div data-ng-if="currentPage != $index" class="circle"></div>
               </a>
              
             </div>
