update user views to remove legacy angular show and update default show to angular

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -11,77 +11,6 @@
   <div class="small-banner-text">A living document of student protest at Yale</div>
 </div>
 
-<% if @user_records.length != 0 %>
-  <div class="container">
-    <%= render 'rails_search_form' %>
-  </div>
-<% end %>
-
-<div class="gray-background">
-  <div class="container">
-    
-    <% if @user_records.length == 0 %>
-      <div class="invite-submissions-container">
-        <div class="center-text">Materials you contribute to the Voices archive will be available here.</div>
-        <br>
-          <%= link_to "CONTRIBUTE", 
-             {:controller => :records, :action => :new},
-             :class => "btn btn-primary wide-button blue-button" %>
-      </div>
-
-    <% else %>
-
-      <div class="masonry-container padding-bottom">
-        <div class="masonry">
-          <% @user_records.each do |record| %>
-            
-            <% if record.is_video? %>  
-              <div class="masonry-item">
-                <%= link_to record_path(record.id), :class => "section" do %>
-                  <%= image_tag record.file_upload.url(:medium), :alt => record.title %>
-                <% end %>
-                <div class="masonry-item-title">
-                  <%= record.title %>
-                </div>
-              </div>
-              
-            <% elsif record.is_image? %>  
-              <div class="masonry-item">
-                <%= link_to record_path(record.id), :class => "section" do %>
-                  <%= image_tag record.file_upload.url(:original), :alt => record.title %>
-                <% end %>
-                <div class="masonry-item-title">
-                  <%= record.title %>
-                </div>
-              </div>
-
-            <% elsif record.is_audio? %>  
-              <div class="masonry-item">
-                <%= link_to record_path(record.id), :class => "section audio-section" do %>
-                  <%= image_tag("audio-icon.jpg", :alt => record.title) %>
-                <% end %>
-                <div class="masonry-item-title">
-                  <%= record.title %>
-                </div>
-              </div>
-
-
-            <% elsif record.has_default_image? %>  
-              <div class="masonry-item">
-                <%= link_to record_path(record.id), :class => "section" do %>
-                  <%= image_tag(record.file_upload_url, :alt => record.title) %>
-                <% end %>
-                <div class="masonry-item-title">
-                  <%= record.title %>
-                </div>
-              </div>
-
-            <% end %>
-          <% end %>
-        </div>
-      </div>
-
-    <% end %>
-
-  </div>
+<div data-ng-app="VoicesApp" data-ng-controller="userController" class="padding-bottom">
+  <%= render 'user_records' %>
 </div>
