--- a/app/views/records/_attachment_gallery.html.erb
+++ b/app/views/records/_attachment_gallery.html.erb
@@ -1,3 +1,7 @@
+<hr class="pagination-hr">
+
+<%= render 'attachment_modal' %>
+
 <div class="masonry-container">
   <div data-ng-class="{ 'one-column-masonry' : attachmentsPerPage == 1, 
                         'two-column-masonry' : attachmentsPerPage == 4,
@@ -8,18 +12,22 @@
          data-ng-repeat="attachment in attachmentsOnCurrentPage" 
          data-ng-cloak>
 
-      <div class="record-attachment-container">
-        <div class="delete-attachment-icon-container">
-          <div class="delete-attachment-icon"
-               data-ng-if="currentPageClass == 'edit'">
-            <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+      <div class="record-attachment-container"
+           data-ng-class="currentPageClass == 'edit' && 'pointer-cursor'"
+           data-ng-mouseenter="currentPageClass == 'edit' && addHoveredAttachment(attachment)"
+           data-ng-mouseleave="currentPageClass == 'edit' && removeHoveredAttachment(attachment)"
+           data-ng-click="currentPageClass == 'edit' && showAttachmentModal(attachment)">
+
+        <div class="edit-attachment-icon-container">
+          <div class="edit-attachment-icon"
+               data-ng-if="currentPageClass == 'edit' && hoveredAttachments.indexOf(attachment) > -1">
+            <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
           </div>
         </div>
+
         <img data-ng-src="{{ getImageUrl(attachment) }}"
              alt="{{ attachment.file_upload_url.split('/').pop().split('?')[0] }}"
-             data-ng-class="{attachmentHover: hover}" 
-             data-ng-mouseenter="hover = true"
-             data-ng-mouseleave="hover = false">
+             data-ng-class="{attachmentHover: hover}" >
 
       </div>
       <input data-ng-if="currentPageClass == 'annotate'"
@@ -28,8 +36,7 @@
              class="attachment-annotation"
              data-ng-change="saveAnnotation(attachment.annotation, attachment.id)"
              >
+
     </div>
   </div>
 </div>
-
-
