--- a/app/views/records/_pagination_controls.html.erb
+++ b/app/views/records/_pagination_controls.html.erb
@@ -39,7 +39,11 @@
         <a href="" data-ng-click="previousPage()">
           <div class="previous-page">
             
-            <button type="button" class="btn" id="previous-page-button" aria-label="Left Align">
+            <button type="button" 
+                    class="btn" 
+                    id="previous-page-button" 
+                    aria-label="Left Align"
+                    data-ng-class="currentPageClass == 'edit' && 'mobile-gray'">
               <span class="glyphicon glyphicon-menu-left" aria-hidden="true"></span>
             </button>
 
@@ -58,7 +62,11 @@
         <a href="" data-ng-click="nextPage()">
           <div class="next-page">
             
-            <button type="button" class="btn" id="next-page-button" aria-label="Left Align">
+            <button type="button" 
+                    class="btn" 
+                    id="next-page-button" 
+                    aria-label="Left Align"
+                    data-ng-class="currentPageClass == 'edit' && 'mobile-gray'">
               <span class="glyphicon glyphicon-menu-right" aria-hidden="true"></span>
             </button>
 
