--- a/app/views/user/_user_records.html.erb
+++ b/app/views/user/_user_records.html.erb
@@ -19,14 +19,14 @@
 
       <div class="masonry-container" data-ng-cloak>
         <div class="masonry">
-          <div class="masonry-item" data-ng-repeat="record in userRecords">
+          <div class="masonry-item" data-ng-repeat="record in records">
             <a href="/records/{{record.record.id}}">
-              <img data-ng-if="record.attachments[0].media_type === 'image'"
-                   data-ng-src="{{ record.attachments[0].medium_image_url }}" 
+              <img data-ng-if="record.attachments[ displayIndex % record.attachments.length ].media_type === 'image'"
+                   data-ng-src="{{ record.attachments[ displayIndex % record.attachments.length ].medium_image_url }}" 
                    alt="{{ record.record.title }}">
 
-              <img data-ng-if="record.attachments[0].media_type != 'image'"
-                   data-ng-src="{{ record.attachments[0].annotation_thumb_url }}" 
+              <img data-ng-if="record.attachments[ displayIndex % record.attachments.length ].media_type != 'image'"
+                   data-ng-src="{{ record.attachments[ displayIndex % record.attachments.length ].annotation_thumb_url }}" 
                    alt="{{ record.record.title }}">
 
               
