udpate user#show view to load angular search bar

--- a/app/views/user/show.html.erb
+++ b/app/views/user/show.html.erb
@@ -12,5 +12,5 @@
 </div>
 
 <div data-ng-app="VoicesApp" data-ng-controller="userController" class="padding-bottom">
-  <%= render 'user_records' %>
+  <%= render 'angular_search' %>
 </div>
