add click handler that deletes attachment to the attachment modal

--- a/app/views/records/_attachment_modal.html.erb
+++ b/app/views/records/_attachment_modal.html.erb
@@ -5,7 +5,8 @@
     <div class="attachment-modal-content">
 
       <div class="delete-icon-container">
-        <div class="delete-attachment-icon-container">
+        <div class="delete-attachment-icon-container"
+             data-ng-click="deleteAttachment(attachment.id)">
           <div class="delete-attachment-icon">
             <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
           </div>
