refactor forms to serve same form to record new and edit

--- a/app/views/records/edit.html.erb
+++ b/app/views/records/edit.html.erb
@@ -22,6 +22,6 @@
 
   <!-- Render the record-level metadata -->
   <div data-ng-controller="FormController" class="padding-sides padding-bottom">
-    <%= render 'edit_record_form' %>
+    <%= render 'record_form' %>
   </div>
 </div>
