--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -22,7 +22,7 @@
     <div class="padding-sides padding-bottom">
 
       <div data-ng-app="VoicesApp" data-ng-controller="FormController">
-        <%= render 'new_record_form' %>
+        <%= render 'record_form' %>
       </div>
 
       <div class="clear-floats"></div>
