--- a/app/views/records/_multiple_attachments_edit.html.erb
+++ b/app/views/records/_multiple_attachments_edit.html.erb
@@ -1,6 +1,6 @@
 <div class="padding-sides">
   <div class="over-image-row">
-    <h3 class="record-title">{{ data.record.title }}</h3> 
+    <h3 class="record-title"><%= @record.title %></h3> 
     <div class="edit-delete-button-container">
       <div class="btn-group modify-record-button">
         <button type="button" class="btn gray-button modify-record-button" id="delete-record-button" data-dismiss="modal">DELETE</button>
